@@ -2282,8 +2282,9 @@ void Game_window::double_clicked
 	{
 		obj = find_object(x, y);
 
-		// Check path, except if an NPC.
+		// Check path, except if an NPC, sign, or if editing.
 	    	if (obj && obj->get_npc_num() <= 0 && !obj->is_monster() &&
+			!cheat.in_map_editor() &&
 			!Is_sign(obj->get_shapenum()) &&
 			!Fast_pathfinder_client::is_grabable(
 					main_actor->get_tile(),
